--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,15 @@
     "cypress:headless": "cypress run"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.0",
+    "@chakra-ui/react": "^1.7.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
