--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "cypress:headless": "cypress run"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^2.0.2",
     "@chakra-ui/icons": "^1.1.0",
     "@chakra-ui/react": "^1.7.0",
     "@emotion/react": "^11",
@@ -18,6 +19,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
