--- a/front/package.json
+++ b/front/package.json
@@ -14,13 +14,16 @@
     "@chakra-ui/react": "^1.7.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4",
     "next": "12.0.3",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.5",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-oauth-flow": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
