--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.5",
     "react-icons": "^4.3.1"
