--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.7.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "framer-motion": "^4",
     "next": "12.0.3",
