--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,7 @@
 name: Docker Compose Build
 on: push
 jobs:
-  test:
+  compose:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
