--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4",
     "next": "12.0.3",
     "next-auth": "^3.29.0",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
