--- a/front/package.json
+++ b/front/package.json
@@ -27,7 +27,10 @@
     "react-oauth-flow": "^1.2.0"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.4",
+    "@types/qs": "^6.9.7",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.3",
+    "typescript": "^4.5.3"
   }
 }
