--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.24.0",
+    "country-to-emoji-flag": "^1.0.0",
     "dotenv": "^10.0.0",
     "framer-motion": "^4",
     "next": "12.0.3",
